Update 1: add security functionality; make this service a central auth server